--- a/extension/popup/page.html
+++ b/extension/popup/page.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 
 <style>
-html, body {
-  width: auto;
-}
+  html,
+  body {
+    width: auto;
+  }
 
-.hidden {
-  display: none;
-}
+  .hidden {
+    display: none;
+  }
 
-.button {
-  margin: 1% auto;
-  padding: 4px;
-  text-align: center;
-  font-size: 1.5em;
-  cursor: pointer;
-}
+  .button {
+    margin: 1% auto;
+    padding: 4px;
+    text-align: center;
+    font-size: 1.5em;
+    cursor: pointer;
+  }
 
-.error {
-        background-color: red;
-}
+  .error {
+    background-color: red;
+  }
 
-a {
+  a {
     text-decoration: none;
-}
+  }
 
-.song:hover {
-  background-color: red;
-}
+  .song:hover {
+    background-color: red;
+  }
 
-.song {
-  background-color: #E5F2F2;
-}
+  .song {
+    background-color: #E5F2F2;
+  }
 
-.add {
-  background-color: #FBFBC9;
-}
+  .add {
+    background-color: #FBFBC9;
+  }
 
-.add:hover {
-  background-color: #EAEA9D;
-}
+  .add:hover {
+    background-color: #EAEA9D;
+  }
 </style>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!-- <link rel="stylesheet" href="style.css"/> -->
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <!-- <link rel="stylesheet" href="style.css"/> -->
+</head>
 
 <body>
   <div id="add" class="button add">Add</div>
@@ -55,7 +57,7 @@ a {
     <p>Try chordify.net</p>
   </div>
   <div id="duplicate-content" class="hidden error button">
-      <p>Duplicate Element.</p>
+    <p>Duplicate Element.</p>
   </div>
   <script src="script.js"></script>
 </body>
